# GraphicsPlayground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/lab1/: CMakeLists.txt  tracer.cpp  tracer.h
src/utils/: CMakeLists.txt  Camera.cpp  Camera.h  renderer.cpp  renderer.h
src/utils/math/: Ray.cpp  Ray.h  geometry.cpp  geometry.h
